add firebase and reconfigure the project

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
-name: uas_ppb_4
-description: A new Flutter project.
+name: ChefCompanion
+description: UAS PPB 4 - Restaurant Support
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
@@ -36,6 +36,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   google_fonts:
+  firebase_core: ^2.22.0
 
 dev_dependencies:
   flutter_test:
