--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   google_fonts:
   firebase_core: ^2.22.0
+  firebase_auth: ^4.14.0
+  provider: ^6.1.1
 
 dev_dependencies:
   flutter_test:
