resolved the bug and reconfigure the project file

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,8 +61,9 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
-
-  # To add assets to your application, add an assets section, like this:
+  
+  # Images 
+    # To add assets to your application, add an assets section, like this:
   assets:
   - assets/image/Icons/hotcoffee.png/
   - assets/image/Menu/Cappucino.jpg/
@@ -77,6 +78,14 @@ flutter:
   - assets/image/Menu/Steak.jpg/
   - assets/image/Menu/WatermelonJuice.jpg/
   - assets/image/Menu/DalgonaCoffee.jpg/
+  #   - images/a_dot_ham.jpeg
+  
+
+
+
+  # To add assets to your application, add an assets section, like this:
+  # assets:
+  #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
