--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -66,6 +66,7 @@ flutter:
     # To add assets to your application, add an assets section, like this:
   assets:
   - assets/image/Icons/hotcoffee.png/
+  - assets/image/Icons/GoogleLogo.png/
   - assets/image/Menu/Cappucino.jpg/
   - assets/image/Menu/Cocktail.jpg/
   - assets/image/Menu/latte.jpg/
